drlm (2.2.0) stable release; urgency=high

  * "Make deb" improved deleting residual files.
  * NEW Real time clients log in DRLM server.
  * NEW bash_completion feature added to facilitate the use.
  * It is possible to perform a "rear recover" without the parameters DRLM_SERVER, REST_OPTS and ID.
  * listbackup, listclient and listnetwork with "-A" parameter by default.

 -- Pau Roura <pau@brainupdaters.net>  Fri, 16 June 2017 00:00:00 +0100

drlm (2.1.3) stable release; urgency=high

  * Updated Debian 6 installclient dependencies.
  * Now "apt-get update" is done before "apt-get install" in instclient debian workflow.
  * Set global UMASK value for all DRLM creating files durting execution.

 -- Pau Roura <pau@brainupdaters.net>  Thu, 16 Mar 2017 00:00:00 +0100

drlm (2.1.2) stable release; urgency=high

  * SUDO_CMDS_DRLM added in default.conf allowing to easy add new sudo
  * Automatic creation of /etc/sudoers.d if not exists RedHat/CenOS 5
  * Fixed some errors for dependencies on default.conf.
  * DRLM_USER variable deleted on addclient and help.
  * Added sudo for stat to allow check size on File Systems without perms.
  * Sudo configuration files are dynamically created according to the OS type.
  * Solved problem for start services with non root user.

 -- Ruben Carbonell <ruben@brainupdaters.net>  Fri, 10 Mar 2017 00:00:00 +0100

drlm (2.1.1) stable release; urgency=high

  * Bugfixes.
  * No Client ID required for delete backups.
  * No Client ID required for manage backups.
  * bkpmgr: Persistent mode deleted.
  * Solved PXE files: forced console=ttyS0 in kernel options.
  * Solved hardcoded PXE filenames (initrd.xz (lzma) now supported).
  * While recommended, It ain't mandatory to use hostname as client_name.
  * Solved drlm user hardcoded in installclient.
  * NAGSRV and NAGPORT added in default.conf.

 -- Pau Roura <pau@brainupdaters.net>  Mon, 21 Feb 2017 00:00:00 +0100

drlm (2.1.0) stable release; urgency=high
