@@ -7,7 +7,7 @@ EXCLUDE_LIST_VG=( ${EXCLUDE_VG[@]} )
 
 EXCLUDE_LIST=( ${EXCLUDE_MOUNTPOINTS[@]} ${BACKUP_PROG_EXCLUDE[@]} )
 
-if DR_IMG_SIZE_MB=$(ssh -tt $DRLM_USER@$CLI_NAME "$(declare -p EXCLUDE_LIST INCLUDE_LIST_VG EXCLUDE_LIST_VG ; declare -f get_fs_free_mb get_fs_size_mb get_fs_used_mb get_client_used_mb); get_client_used_mb") ;
+if DR_IMG_SIZE_MB=$(ssh $SSH_OPTS $DRLM_USER@$CLI_NAME "$(declare -p EXCLUDE_LIST INCLUDE_LIST_VG EXCLUDE_LIST_VG ; declare -f get_fs_free_mb get_fs_size_mb get_fs_used_mb get_client_used_mb); get_client_used_mb") ;
 then
 	Log "$PROGRAM:$WORKFLOW:REMOTE:getspace:DR:$CLI_NAME: .... remote space collection Success!"
 	let "DR_IMG_SIZE_MB+=DR_IMG_SIZE_MB*10/100"
