@@ -280,7 +280,7 @@ HOSTS_FILE="/etc/hosts"
 
 ################ ---- HTTP CONFIGURATION
 #
-# 
+#
 REAR_LOG_DIR="/var/log/drlm/rear"
 CLI_CONF_DIR="/etc/drlm/clients"
 REST_OPTS="--capath /etc/rear/cert"
@@ -340,6 +340,11 @@ REAR_SERVICES_UBUNTU16="rpcbind"
 #
 #
 SUDO_CMDS_DRLM="mount vgs stat"
+
+############### ----- SSH PARAMETERS
+#
+#
+SSH_OPTS="-ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no"
 
 ################ ---- custom scripts
 #
