@@ -23,7 +23,7 @@ function get_release() {
 function get_arch() {
     local USER=$1
     local CLI_NAME=$2
-    ARCH=$( ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME arch )
+    ARCH=$( ssh $SSH_OPTS $USER@$CLI_NAME arch )
     if [ $ARCH == "" ]; then echo noarch; else echo $ARCH; fi
 }
 
@@ -37,7 +37,7 @@ function check_apt () {
     local USER=$1
     local CLI_NAME=$2
     local SUDO=$3
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO apt-cache search netcat|grep -w netcat &>/dev/null)"
+    ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO apt-cache search netcat|grep -w netcat &>/dev/null)"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -45,7 +45,7 @@ function check_yum () {
     local USER=$1
     local CLI_NAME=$2
     local SUDO=$3
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO yum search netcat| grep -w netcat &> /dev/null )"
+    ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO yum search netcat| grep -w netcat &> /dev/null )"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -53,7 +53,7 @@ function check_zypper () {
     local USER=$1
     local CLI_NAME=$2
     local SUDO=$3
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO zypper se netcat| grep -w netcat &> /dev/null )"
+    ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO zypper se netcat| grep -w netcat &> /dev/null )"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -64,9 +64,9 @@ function install_dependencies_apt () {
     local REAR_DEP_UBUNTU="$3"
     local SUDO=$4
     if [[ $DISTRO -eq "Debian" ]]; then
-        ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO apt-get update &> /dev/null; $SUDO apt-get -y install ${REAR_DEP_DEBIAN[@]} &> /dev/null)"
+        ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO apt-get update &> /dev/null; $SUDO apt-get -y install ${REAR_DEP_DEBIAN[@]} &> /dev/null)"
     else
-        ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO apt-get update &> /dev/null; $SUDO apt-get -y install ${REAR_DEP_UBUNTU[@]} &> /dev/null)"
+        ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO apt-get update &> /dev/null; $SUDO apt-get -y install ${REAR_DEP_UBUNTU[@]} &> /dev/null)"
     fi
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
@@ -76,7 +76,7 @@ function install_dependencies_yum () {
     local CLI_NAME=$2
     local REAR_DEP_REDHAT="$3"
     local SUDO=$4
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO yum -y install ${REAR_DEP_REDHAT[@]} &>/dev/null )"
+    ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO yum -y install ${REAR_DEP_REDHAT[@]} &>/dev/null )"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -98,7 +98,7 @@ function install_rear_yum_repo () {
     local USER=$1
     local CLI_NAME=$2
     local SUDO=$3
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO yum -y remove rear; $SUDO yum -y install rear &>/dev/null )"
+    ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO yum -y remove rear; $SUDO yum -y install rear &>/dev/null )"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -107,7 +107,7 @@ function ssh_install_rear_yum () {
     local CLI_NAME=$2
     local URL_REAR=$3
     local SUDO=$4
-    YUM=$(ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$(declare -p SUDO URL_REAR; declare -f install_rear_yum); install_rear_yum");
+    YUM=$(ssh $SSH_OPTS $USER@$CLI_NAME "$(declare -p SUDO URL_REAR; declare -f install_rear_yum); install_rear_yum");
     if [ "$YUM" == "" ]; then
         return 0
     else
@@ -120,7 +120,7 @@ function install_rear_zypper_repo () {
     local USER=$1
     local CLI_NAME=$2
     local SUDO=$3
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO zypper rm -y rear; $SUDO zypper in -y rear  &>/dev/null )"
+    ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO zypper rm -y rear; $SUDO zypper in -y rear  &>/dev/null )"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -142,7 +142,7 @@ function ssh_install_rear_dpkg () {
     local CLI_NAME=$2
     local URL_REAR=$3
     local SUDO=$4
-    APT=$(ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$(declare -p SUDO URL_REAR; declare -f install_rear_dpkg); install_rear_dpkg");
+    APT=$(ssh $SSH_OPTS $USER@$CLI_NAME "$(declare -p SUDO URL_REAR; declare -f install_rear_dpkg); install_rear_dpkg");
     if [ "$APT" == "" ]; then
         return 0
     else
@@ -169,7 +169,7 @@ function ssh_install_rear_zypper () {
     local CLI_NAME=$2
     local URL_REAR=$3
     local SUDO=$4
-    ZYPPER=$(ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$(declare -p SUDO URL_REAR; declare -f install_rear_zypper); install_rear_zypper");
+    ZYPPER=$(ssh $SSH_OPTS $USER@$CLI_NAME "$(declare -p SUDO URL_REAR; declare -f install_rear_zypper); install_rear_zypper");
     if [ "$ZYPPER" == "" ]; then
         return 0
     else
@@ -187,7 +187,7 @@ function send_drlm_managed () {
  local USER=$1
  local CLI_NAME=$2
  local SUDO=$3
- ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no ${USER}@${CLI_NAME} "( printf '%s\n%s\n%s\n%s\n' "DRLM_MANAGED=y" "DRLM_SERVER=$(hostname -s)" "DRLM_ID=$CLI_NAME" 'DRLM_REST_OPTS=\"$REST_OPTS\"' | ${SUDO} tee /etc/rear/local.conf >/dev/null && ${SUDO} chmod 644 /etc/rear/local.conf )"
+ ssh $SSH_OPTS ${USER}@${CLI_NAME} "( printf '%s\n%s\n%s\n%s\n' "DRLM_MANAGED=y" "DRLM_SERVER=$(hostname -s)" "DRLM_ID=$CLI_NAME" 'DRLM_REST_OPTS=\"$REST_OPTS\"' | ${SUDO} tee /etc/rear/local.conf >/dev/null && ${SUDO} chmod 644 /etc/rear/local.conf )"
  if [ $? -eq 0 ];then return 0; else return 1; fi
 }
 
@@ -195,7 +195,7 @@ function make_ssl_capath () {
  local USER=$1
  local CLI_NAME=$2
  local SUDO=$3
- ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no ${USER}@${CLI_NAME} "( if [ ! -d /etc/rear/cert ]; then ${SUDO} mkdir -p /etc/rear/cert && ${SUDO} chmod 755 /etc/rear/cert; fi )"
+ ssh $SSH_OPTS ${USER}@${CLI_NAME} "( if [ ! -d /etc/rear/cert ]; then ${SUDO} mkdir -p /etc/rear/cert && ${SUDO} chmod 755 /etc/rear/cert; fi )"
  if [ $? -eq 0 ];then return 0; else return 1; fi
 }
 
@@ -212,7 +212,7 @@ function send_drlm_hostname () {
  local CLI_NAME=$2
  local SRV_IP=$3
  local SUDO=$4
- ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no ${USER}@${CLI_NAME} "( printf '%s\t%s\n' "$SRV_IP" "$(hostname -s)" | ${SUDO} tee --append /etc/hosts >/dev/null )"
+ ssh $SSH_OPTS ${USER}@${CLI_NAME} "( printf '%s\t%s\n' "$SRV_IP" "$(hostname -s)" | ${SUDO} tee --append /etc/hosts >/dev/null )"
  if [ $? -eq 0 ];then return 0; else return 1; fi
 }
 
@@ -222,7 +222,7 @@ function create_drlm_user () {
     local DRLM_USER=$3
     local SUDO=$4
     PASS=$(echo -n changeme | openssl passwd -1 -stdin)
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$SUDO /usr/sbin/useradd -d /home/$DRLM_USER -c 'DRLM User Agent' -m -s /bin/bash -p '$PASS' $DRLM_USER"
+    ssh $SSH_OPTS $USER@$CLI_NAME "$SUDO /usr/sbin/useradd -d /home/$DRLM_USER -c 'DRLM User Agent' -m -s /bin/bash -p '$PASS' $DRLM_USER"
     if [ $? -eq 0 ];then return 0; else return 1; fi
 }
 
@@ -231,7 +231,7 @@ function delete_drlm_user () {
     local CLI_NAME=$2
     local DRLM_USER=$3
     local SUDO=$4
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$SUDO /usr/sbin/userdel -r $DRLM_USER"
+    ssh $SSH_OPTS $USER@$CLI_NAME "$SUDO /usr/sbin/userdel -r $DRLM_USER"
     if [ $? -eq 0 ];then return 0; else return 1; fi
 }
 
@@ -239,7 +239,7 @@ function disable_drlm_user_login () {
     local USER=$1
     local CLI_NAME=$2
     local SUDO=$3
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "( $SUDO chage -I -1 -m 0 -M 99999 -E -1 $DRLM_USER; $SUDO passwd -l $DRLM_USER )"
+    ssh $SSH_OPTS $USER@$CLI_NAME "( $SUDO chage -I -1 -m 0 -M 99999 -E -1 $DRLM_USER; $SUDO passwd -l $DRLM_USER )"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -251,7 +251,7 @@ function ssh_remove_authorized_keys () {
     local USER=$1
     local CLI_NAME=$2
     local AUTH_KEY=$(cat ~/.ssh/id_rsa.pub|awk '{print $3}')
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$(declare -p AUTH_KEY ; declare -f remove_authorized_keys); remove_authorized_keys"
+    ssh $SSH_OPTS $USER@$CLI_NAME "$(declare -p AUTH_KEY ; declare -f remove_authorized_keys); remove_authorized_keys"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -279,7 +279,7 @@ function ssh_start_services () {
     local SERVICES="$3"
     local DISTRO=$4
     local SUDO=$5
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$(declare -p SERVICES DISTRO SUDO; declare -f start_services); start_services"
+    ssh $SSH_OPTS $USER@$CLI_NAME "$(declare -p SERVICES DISTRO SUDO; declare -f start_services); start_services"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
@@ -315,7 +315,7 @@ function ssh_config_sudo () {
     local CLI_NAME=$2
     local DRLM_USER=$3
     local SUDO=$4
-    ssh -ttt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no $USER@$CLI_NAME "$(declare -p DRLM_USER SUDO_CMDS_DRLM SUDO ; declare -f config_sudo); config_sudo"
+    ssh $SSH_OPTS $USER@$CLI_NAME "$(declare -p DRLM_USER SUDO_CMDS_DRLM SUDO ; declare -f config_sudo); config_sudo"
     if [ $? -eq 0 ]; then return 0; else return 1; fi
 }
 
