@@ -5,6 +5,7 @@ drlm (2.2.0) stable release; urgency=high
   * NEW bash_completion feature added to facilitate the use.
   * It is possible to perform a "rear recover" without the parameters DRLM_SERVER, REST_OPTS and ID.
   * listbackup, listclient and listnetwork with "-A" parameter by default.
+  * SSH_OPTS variable created in default.conf for remove hardcoded ssh options.
 
  -- Pau Roura <pau@brainupdaters.net>  Fri, 16 June 2017 00:00:00 +0100
 
